export const snapshot = {};

snapshot[`photos [file] 1`] = `
"
🖼  Photo 1
"
`;

snapshot[`photos [photo] 1`] = `
"
🖼  Photo 1
"
`;

snapshot[`photos [directory] 1`] = `
"
🖼  Photo 2 [[33mmissing:model[39m]
🖼  Photo 1
"
`;

snapshot[`photos [photo1] [photo2] 1`] = `
"
🖼  Photo 1
🖼  Photo 2 [[33mmissing:model[39m]
"
`;

snapshot[`photos [photo] --json 1`] = `
'
{
  "path": "[directory]/photo1/source.jpg",
  "width": 240,
  "height": 180,
  "title": "Photo 1",
  "description": "Four jellyfish with translucent bodies and long tentacles float gracefully against a vivid background in an aquarium setting.",
  "keywords": [
    "California Academy Of Sciences",
    "Translucent Bodies",
    "Long Tentacles",
    "Float Gracefully",
    "Vivid Background",
    "Aquarium Setting",
    "Marine Life",
    "Underwater World",
    "Ocean Creatures",
    "Exotic Jellyfish",
    "Aquatic Environment",
    "Sea Life",
    "Ethereal Beauty",
    "Marine Biology",
    "Underwater Exploration",
    "Aquatic Creatures",
    "Jellyfish Swimming",
    "Oceanic Wildlife",
    "Marine Exhibit",
    "Horizontal",
    "No People",
    "Photography",
    "Jellyfish",
    "Underwater",
    "Water",
    "Blue",
    "Undersea",
    "Sea",
    "Nature",
    "Animal Themes",
    "Animal Wildlife",
    "Swimming",
    "Tentacle"
  ],
  "date": "2023-12-10T14:28:09-08:00",
  "location": "California Academy of Sciences",
  "city": "San Francisco",
  "state": "California",
  "country": "United States",
  "make": "Apple",
  "model": "Model 1",
  "lens": "iPhone 13 mini back dual wide camera 5.1mm f/1.6",
  "software": "Affinity Photo 2 2.5.7",
  "license": "https://creativecommons.org/licenses/by/4.0/",
  "id": "photo1",
  "variants": [
    {
      "path": "[directory]/photo1/post-1.jpg",
      "width": 108,
      "height": 135,
      "title": "Photo 1",
      "description": "Four jellyfish with translucent bodies and long tentacles float gracefully against a vivid background in an aquarium setting (image 1).",
      "keywords": [
        "California Academy Of Sciences",
        "Translucent Bodies",
        "Long Tentacles",
        "Float Gracefully",
        "Vivid Background",
        "Aquarium Setting",
        "Marine Life",
        "Underwater World",
        "Ocean Creatures",
        "Exotic Jellyfish",
        "Aquatic Environment",
        "Sea Life",
        "Ethereal Beauty",
        "Marine Biology",
        "Underwater Exploration",
        "Aquatic Creatures",
        "Jellyfish Swimming",
        "Oceanic Wildlife",
        "Marine Exhibit",
        "Horizontal",
        "No People",
        "Photography",
        "Jellyfish",
        "Underwater",
        "Water",
        "Blue",
        "Undersea",
        "Sea",
        "Nature",
        "Animal Themes",
        "Animal Wildlife",
        "Swimming",
        "Tentacle"
      ],
      "date": "2023-12-10T14:28:09-08:00",
      "location": "California Academy of Sciences",
      "city": "San Francisco",
      "state": "California",
      "country": "United States",
      "make": "Apple",
      "model": "Model 1",
      "lens": "iPhone 13 mini back dual wide camera 5.1mm f/1.6",
      "software": "Affinity Photo 2 2.5.7",
      "license": "https://creativecommons.org/licenses/by/4.0/"
    },
    {
      "path": "[directory]/photo1/post-2.jpg",
      "width": 108,
      "height": 135,
      "title": "Photo 1",
      "description": "Four jellyfish with translucent bodies and long tentacles float gracefully against a vivid background in an aquarium setting (image 2).",
      "keywords": [
        "California Academy Of Sciences",
        "Translucent Bodies",
        "Long Tentacles",
        "Float Gracefully",
        "Vivid Background",
        "Aquarium Setting",
        "Marine Life",
        "Underwater World",
        "Ocean Creatures",
        "Exotic Jellyfish",
        "Aquatic Environment",
        "Sea Life",
        "Ethereal Beauty",
        "Marine Biology",
        "Underwater Exploration",
        "Aquatic Creatures",
        "Jellyfish Swimming",
        "Oceanic Wildlife",
        "Marine Exhibit",
        "Horizontal",
        "No People",
        "Photography",
        "Jellyfish",
        "Underwater",
        "Water",
        "Blue",
        "Undersea",
        "Sea",
        "Nature",
        "Animal Themes",
        "Animal Wildlife",
        "Swimming",
        "Tentacle"
      ],
      "date": "2023-12-10T14:28:09-08:00",
      "location": "California Academy of Sciences",
      "city": "San Francisco",
      "state": "California",
      "country": "United States",
      "make": "Apple",
      "model": "Model 1",
      "lens": "iPhone 13 mini back dual wide camera 5.1mm f/1.6",
      "software": "Affinity Photo 2 2.5.7",
      "license": "https://creativecommons.org/licenses/by/4.0/"
    },
    {
      "path": "[directory]/photo1/square.jpg",
      "width": 180,
      "height": 180,
      "title": "Photo 1",
      "description": "Four jellyfish with translucent bodies and long tentacles float gracefully against a vivid background in an aquarium setting.",
      "keywords": [
        "California Academy Of Sciences",
        "Translucent Bodies",
        "Long Tentacles",
        "Float Gracefully",
        "Vivid Background",
        "Aquarium Setting",
        "Marine Life",
        "Underwater World",
        "Ocean Creatures",
        "Exotic Jellyfish",
        "Aquatic Environment",
        "Sea Life",
        "Ethereal Beauty",
        "Marine Biology",
        "Underwater Exploration",
        "Aquatic Creatures",
        "Jellyfish Swimming",
        "Oceanic Wildlife",
        "Marine Exhibit",
        "Horizontal",
        "No People",
        "Photography",
        "Jellyfish",
        "Underwater",
        "Water",
        "Blue",
        "Undersea",
        "Sea",
        "Nature",
        "Animal Themes",
        "Animal Wildlife",
        "Swimming",
        "Tentacle"
      ],
      "date": "2023-12-10T14:28:09-08:00",
      "location": "California Academy of Sciences",
      "city": "San Francisco",
      "state": "California",
      "country": "United States",
      "make": "Apple",
      "model": "Model 1",
      "lens": "iPhone 13 mini back dual wide camera 5.1mm f/1.6",
      "software": "Affinity Photo 2 2.5.7",
      "license": "https://creativecommons.org/licenses/by/4.0/"
    },
    {
      "path": "[directory]/photo1/story.jpg",
      "width": 108,
      "height": 192,
      "title": "Photo 1",
      "description": "Four jellyfish with translucent bodies and long tentacles float gracefully against a vivid background in an aquarium setting.",
      "keywords": [
        "California Academy Of Sciences",
        "Translucent Bodies",
        "Long Tentacles",
        "Float Gracefully",
        "Vivid Background",
        "Aquarium Setting",
        "Marine Life",
        "Underwater World",
        "Ocean Creatures",
        "Exotic Jellyfish",
        "Aquatic Environment",
        "Sea Life",
        "Ethereal Beauty",
        "Marine Biology",
        "Underwater Exploration",
        "Aquatic Creatures",
        "Jellyfish Swimming",
        "Oceanic Wildlife",
        "Marine Exhibit",
        "Horizontal",
        "No People",
        "Photography",
        "Jellyfish",
        "Underwater",
        "Water",
        "Blue",
        "Undersea",
        "Sea",
        "Nature",
        "Animal Themes",
        "Animal Wildlife",
        "Swimming",
        "Tentacle"
      ],
      "date": "2023-12-10T14:28:09-08:00",
      "location": "California Academy of Sciences",
      "city": "San Francisco",
      "state": "California",
      "country": "United States",
      "make": "Apple",
      "model": "Model 1",
      "lens": "iPhone 13 mini back dual wide camera 5.1mm f/1.6",
      "software": "Affinity Photo 2 2.5.7",
      "license": "https://creativecommons.org/licenses/by/4.0/"
    },
    {
      "path": "[directory]/photo1/wide.jpg",
      "width": 320,
      "height": 180,
      "title": "Photo 1",
      "description": "Four jellyfish with translucent bodies and long tentacles float gracefully against a vivid background in an aquarium setting.",
      "keywords": [
        "California Academy Of Sciences",
        "Translucent Bodies",
        "Long Tentacles",
        "Float Gracefully",
        "Vivid Background",
        "Aquarium Setting",
        "Marine Life",
        "Underwater World",
        "Ocean Creatures",
        "Exotic Jellyfish",
        "Aquatic Environment",
        "Sea Life",
        "Ethereal Beauty",
        "Marine Biology",
        "Underwater Exploration",
        "Aquatic Creatures",
        "Jellyfish Swimming",
        "Oceanic Wildlife",
        "Marine Exhibit",
        "Horizontal",
        "No People",
        "Photography",
        "Jellyfish",
        "Underwater",
        "Water",
        "Blue",
        "Undersea",
        "Sea",
        "Nature",
        "Animal Themes",
        "Animal Wildlife",
        "Swimming",
        "Tentacle"
      ],
      "date": "2023-12-10T14:28:09-08:00",
      "location": "California Academy of Sciences",
      "city": "San Francisco",
      "state": "California",
      "country": "United States",
      "make": "Apple",
      "model": "Model 1",
      "lens": "iPhone 13 mini back dual wide camera 5.1mm f/1.6",
      "software": "Affinity Photo 2 2.5.7",
      "license": "https://creativecommons.org/licenses/by/4.0/"
    }
  ]
}
'
`;

snapshot[`photos [photo] --sync 1`] = `
"
🖼  Photo 1
"
`;
